[project]
name = "dev-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.105.2",
    "google>=3.0.0",
    "google-genai>=2.7.0",
    "litellm>=1.86.2",
    "openai>=2.38.0",
    "openrouter>=0.9.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scraper>=0.1.0",
    "tiktoken>=0.13.0",
]
